--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ img{
 
 .hero{
   padding: 45px 0;
+}
+
+.hero, .about{
   background-color: #1abc9c;
 }
 
@@ -36,6 +39,11 @@ hr{
 
 .ac_cards img{
   width: 100%;
+}
+
+.about button{
+  color: white;
+  border-color: white;
 }
 
 .my-form input,
@@ -61,3 +69,31 @@ hr{
 .my-form input::placeholder{
   color: #2b3d4f
 }
+
+.circle{
+  border-radius: 50%;
+  border: 1px solid white;
+  width: 40px;
+  height: 40px;  
+}
+
+.footer_top{
+  background-color: #3a546d;
+}
+
+.footer_top span{
+  color: #1abc9c;
+}
+
+.my-f-size{
+  font-size: 14px;
+}
+
+.footer_bottom{
+  background-color: #2c3e50;
+}
+
+.footer_bottom p{
+  font-size: 12px;
+}
+
